--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="./styles/home-page-style">
   </head>
-  <body class="container-fluid">
+  <body >
     <!--HEADER-->
     <header class="row nav-custom">
       <div class="col">
