--- a/order.html
+++ b/order.html
@@ -34,11 +34,11 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="./index.html"
+                  <a class="nav-link" aria-current="page" href="./index.html"
                     >HEM</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./order.html">BESTÄLL</a>
+                  <a class="nav-link active" href="./order.html">BESTÄLL</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./about.html">OM OSS</a>
