landing page done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="./styles/general.css"/>
 
-    <link rel="stylesheet" href="./styles/home-page-style">
+    <link rel="stylesheet" href="./styles/home-page-style.css">
   </head>
   <body>
 
@@ -53,7 +53,16 @@
 
     <!--Main content-->
     <section class="row">
+      <div class="col content">
+        <h5>Välkomna till 3amos - din go-to plats för fantastisk pizza!</h5>
+        <p>
+           Namnet 3amo, som betyder "farbror" på arabiska, uttrycker respekt och värme. 
+           Här tillagas pizza enligt ett familjerecept som gått i arv över
+            generationer. Njut av lyxen i avslappnad atmosfär, 
+            där varje tugga smakar som kärlek och tradition. 
+            Välkommen till vår famn av god smak!</p>
       
+      </div>
     </section>
 
     <!-- footer -->
