--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!--Main content-->
     <section class="row">
       <div class="col content">
-        <h5>Välkomna till 3amos - din go-to plats för fantastisk pizza!</h5>
+        <h5>Välkommen till 3amos - din go-to plats för fantastisk pizza!</h5>
         <p>
            Namnet 3amo, som betyder "farbror" på arabiska, uttrycker respekt och värme. 
            Här tillagas pizza enligt ett familjerecept som gått i arv över
