--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <p>
            Namnet 3amo, som betyder "farbror" på arabiska, uttrycker respekt och värme. 
            Här tillagas pizza enligt ett familjerecept som gått i arv över
-            generationer. Njut av lyxen i avslappnad atmosfär, 
+            generationer. Njut av lyxen i en avslappnad atmosfär, 
             där varje tugga smakar som kärlek och tradition. 
             Välkommen till vår famn av god smak!</p>
       
