--- a/order.html
+++ b/order.html
@@ -59,13 +59,13 @@
     <!-- footer -->
     <footer class="row fixed-bottom footer-custom">
         <div class="col">
-            <h5 id="contact-footer-text">Kontakt: </h5>
+            <h5 class="contact-footer-text">Kontakt: </h5>
         </div>
         <div class="col">
-            <p>3amos@pizza.nu</p>
+            <p class="contact-footer-text">3amos@pizza.nu</p>
         </div>
         <div class="col">
-            <p>070 000 1337</p>
+            <p class="contact-footer-text">070 000 1337</p>
         </div>
     </footer>
     </div>
