--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
     </header>
 
     <!--Main content-->
-    <section class="row">
+    <div class="container">
+      <section class="row">
       <div class="col content">
         <h5>Välkommen till 3amos - din go-to plats för fantastisk pizza!</h5>
         <p>
@@ -64,6 +65,7 @@
       
       </div>
     </section>
+    </div>
 
     <!-- footer -->
     <footer class="row fixed-bottom footer-custom">
