--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/general.css"/>
-
     <link rel="stylesheet" href="./styles/home-page-style.css">
+    <script defer src="./scripts/weather.js"></script>
   </head>
   <body>
 
@@ -62,6 +62,7 @@
             generationer. Njut av lyxen i en avslappnad atmosfär, 
             där varje tugga smakar som kärlek och tradition. 
             Välkommen till vår famn av god smak!</p>
+            <p id="weatherMessage"></p>
       
       </div>
     </section>
