--- a/order.html
+++ b/order.html
@@ -61,7 +61,7 @@
         <h3>Meny</h3>
         
         <button class="cart-btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#order-checkout">
-          <img src="./media/shopping-cart-icon.png" id="shopping-cart-icon"/>
+          <img src="./media/shopping-cart-icon.png" alt="Shopping cart icon" id="shopping-cart-icon"/>
           <p id="itemsInBasket"></p>
         </button>
           
