--- a/about.html
+++ b/about.html
@@ -53,8 +53,9 @@
     <!--Main content-->
     <section class="row">
 
-       <div class="col">
-        <div class="mapouter"><div class="gmap_canvas"><iframe width="300" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=Ebbe%20Lieberathsgatan%2018C,%20412%2065%20G%C3%B6teborg&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:300px;width:300px;}</style><a href="https://www.embedgooglemap.net">embed google map</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:300px;}</style></div></div>
+       <div class="col content">
+        <p>Välkommen till 3amos - din ultimata destination för enastående pizza! Hos oss välkomnas du av en atmosfär präglad av värme och respekt, där varje tugga bär på generationers kärlek och tradition. Upptäck våra rätter som tillagas enligt ett familjerecept som gått i arv i åratal. Besök oss på Ebbe Lieberathsgatan 18C, 412 65 Göteborg, eller ring oss på 070 000 1337 för en smakupplevelse utöver det vanliga. Välkommen till vår famn av god smak!</p>
+        <div class="mapouter"><div class="gmap_canvas"><iframe width="300" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=Ebbe%20Lieberathsgatan%2018C,%20412%2065%20G%C3%B6teborg&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><br><style>.mapouter{position:relative;text-align:right;height:300px;width:300px;}</style><a href="https://www.embedgooglemap.net">embed google map</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:300px;}</style></div></div>
        </div>
 
     </section>
