--- a/order.html
+++ b/order.html
@@ -30,7 +30,7 @@
               aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="./index.html"><img src="./media/logo-white-transparent.png" class="brand-img" width="120vh" alt="Restaurant logo"></a>
+            <a class="navbar-brand" href="./index.html"><img src="./media/logo-white-transparent.webp" class="brand-img" width="120vh" alt="Restaurant logo"></a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
@@ -61,7 +61,7 @@
         <h3>Meny</h3>
         
         <button class="cart-btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#order-checkout">
-          <img src="./media/shopping-cart-icon.png" alt="Shopping cart icon" id="shopping-cart-icon"/>
+          <img src="./media/shopping-cart-icon.webp" alt="Shopping cart icon" id="shopping-cart-icon"/>
           <p id="itemsInBasket"></p>
         </button>
           
