--- a/order.html
+++ b/order.html
@@ -10,7 +10,6 @@
     />
     <link rel="stylesheet" href="./styles/general.css"/>
     <link rel="stylesheet" href="./styles/order-page-style.css">
-    <script defer src="./scripts/shop.js"></script>
   </head>
   <body>
 
@@ -110,5 +109,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./scripts/shop.js"></script>
+
   </body>
 </html>
