--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/general.css"/>
+    <link rel="stylesheet" href="./styles/about-page-styles.css">
 
   </head>
   <body>
@@ -54,8 +55,18 @@
     <section class="row">
 
        <div class="col content">
-        <p>Välkommen till 3amos - din ultimata destination för enastående pizza! Hos oss välkomnas du av en atmosfär präglad av värme och respekt, där varje tugga bär på generationers kärlek och tradition. Upptäck våra rätter som tillagas enligt ett familjerecept som gått i arv i åratal. Besök oss på Ebbe Lieberathsgatan 18C, 412 65 Göteborg, eller ring oss på 070 000 1337 för en smakupplevelse utöver det vanliga. Välkommen till vår famn av god smak!</p>
-        <div class="mapouter"><div class="gmap_canvas"><iframe width="300" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=Ebbe%20Lieberathsgatan%2018C,%20412%2065%20G%C3%B6teborg&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><br><style>.mapouter{position:relative;text-align:right;height:300px;width:300px;}</style><a href="https://www.embedgooglemap.net">embed google map</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:300px;}</style></div></div>
+        <h4>Välkommen till 3amos - din go-to plats för fantastisk pizza!</h4>
+        <p>Vår passion för tradition och kärlek till matlagningskonst går hand i hand på 3amos. 
+          Med vårt familjerecept som grund tillagar vi varje pizza med omsorg och hängivenhet, så varje tugga blir en hyllning till vår historia och arv. 
+          Från klassiska favoriter till våra egna nyskapande kreationer, vår meny bjuder på något för alla smaker och preferenser.
+          Varför inte prova vår signaturpizza, vars smaker dansar harmoniskt på din tunga och väcker känslor av hemtrevnad och gemenskap?Oavsett om du vill avnjuta din pizza hos oss i den varma och välkomnande atmosfären på Ebbe Lieberathsgatan 18C, eller föredrar att låta oss leverera smakupplevelsen direkt till din dörr, är 3amos redo att ta dig med på en kulinarisk resa du sent kommer att glömma.
+          Bläddra igenom vår meny och låt dig frestas av våra lockande rätter. 
+          Ring oss på 070 000 1337 för att beställa din smakupplevelse eller besök oss personligen för att uppleva vår famn av god smak på nära håll. 
+          Hos 3amos välkomnar vi dig att utforska en värld av smak och tradition – varje tugga är en berättelse om kärlek och njutning.</p>
+        
+          <div class="map-container">
+            <div class="mapouter"><div class="gmap_canvas"><iframe width="300" height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=Ebbe%20Lieberathsgatan%2018C,%20412%2065%20G%C3%B6teborg&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><br><style>.mapouter{position:relative;text-align:right;height:300px;width:300px;}</style><a href="https://www.embedgooglemap.net">embed google map</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:300px;width:300px;}</style></div></div>
+          </div>
        </div>
 
     </section>
